# test

src/: CMakeLists.txt  glad.c  main 2.cpp  main.cpp
src/include/glad/: glad.h
src/libs/glew/: .gitignore
